clusters/my-cluster/apps/odoo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:    
  name: odoo
  namespace: odoo-flux
spec:
  type: LoadBalancer
  selector:
    app: odoo-stg
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
