clusters/my-cluster/apps/postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: odoo-flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-stg
  template:
    metadata:
      labels:
        app: postgres-stg
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - tambun-worker1
      containers:
        - name: postgres
          image: postgres:15.1-bullseye
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgresql-data-flux-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: odoo-flux
  labels:
    app: postgres-stg
spec:
  # clusterIP: 10.233.70.51
  type: NodePort
  selector:
    app: postgres-stg
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
